# novel-localizer-web

./: .editorconfig  .gitattributes  .gitignore  CODEOWNERS  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  deploy-backend.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_upload_purpose.py
backend/scripts/: export_openapi.py
backend/src/shiori/: __init__.py  api.py  app.py  config.py  db.py  errors.py  main.py  models.py  provider.py  schemas.py  security.py  ssrf.py  worker.py
backend/src/shiori/documents/: __init__.py  epub.py  errors.py  model.py  pdf.py  text.py
backend/src/shiori/pipeline/: __init__.py  alignment.py  core_jobs.py  execution.py  lease.py  quality.py  retrieval.py  translation.py
backend/tests/: conftest.py  test_api.py  test_documents.py  test_pipeline.py  test_provider.py  test_security.py
backend/tests/fixtures/: __init__.py  builders.py
deploy/: shiori.env.example
deploy/cloudflared/: config.yml.example
deploy/scripts/: backup.sh  bootstrap-host.sh  cleanup.sh  install-release.sh  preflight.sh  restore-drill.sh
deploy/sudoers.d/: shiori-deploy
docs/: architecture.md  corpus-policy.md  deployment.md  error-codes.md  operations.md
frontend/: .dev.vars.example  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.node.json  vite.config.ts  wrangler.jsonc
frontend/public/: _headers
openapi/: README.md  openapi.json
scripts/: check_repository.py  configure-github.ps1
(+30 files in other folders)
