[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "shiori-backend"
version = "0.1.0"
description = "Private Japanese book localization workbench backend"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14,<2",
  "charset-normalizer>=3.4,<4",
  "cryptography>=48.0.1,<49",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "PyMuPDF>=1.25,<2",
  "pydantic-settings>=2.7,<3",
  "PyJWT[crypto]>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "reportlab>=4.3,<5",
  "sqlalchemy>=2.0.36,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.11,<1",
]

[project.scripts]
shiori-api = "shiori.app:run"

[tool.hatch.build.targets.wheel]
packages = ["src/shiori"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
  "error",
  "ignore:Using .*starlette.testclient.*",
  "ignore::DeprecationWarning:fastapi.testclient",
  "ignore::DeprecationWarning:starlette.formparsers",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true


[tool.coverage.run]
source = ["shiori"]
branch = true
